@@ -220,12 +220,12 @@
     </header>
     <div class="events-view">
       <section class="fw-news events-view__item">
-        <!-- <img src="../uploads/news/tonyabbott.jpg" alt="" class="fw-news__image"> -->
+        <!-- <img src="images/news/tonyabbott.jpg" alt="" class="fw-news__image"> -->
         <div class="fw-image-parallax" data-parallax-url="images/events/themeGovernment-Events_03.jpg"></div>
         <div class="fw-news__pattern"></div>
         <div class="fw-news__inner">
           <div class="img-circle">
-            <!-- <img src="../uploads/event-view/Article/logo-ar.jpg" alt=""> -->
+             <img src="images/event-view/Article/logo-ar.jpg" alt="">
           </div>
           <h1>Prince Islands ferry tour</h1>
         </div>
