@@ -4,6 +4,7 @@ All notable changes to this project will be documented in this file.
 ## [2.7.0] - 2020-07-17
 ### Added
 - Pictures to all pages.
+- Default color stylesheets to all pages.
 
 ## [2.5.0] - 2020-07-16
 ### Added
